New Game class, restructures the library. Redone interpolation. TileMapLoader for XML tmx maps.

--- a/src/main/res/layout/default_pause_menu_layout.xml
+++ b/src/main/res/layout/default_pause_menu_layout.xml
@@ -8,7 +8,7 @@
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:contentDescription="Resume"
-        android:onClick="r"
+        android:onClick="resumeGame"
         android:src="@android:drawable/ic_media_play"/>
 
     <ImageButton
