--- a/src/main/res/layout/default_main_menu_layout.xml
+++ b/src/main/res/layout/default_main_menu_layout.xml
@@ -2,11 +2,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:onClick="b">
+    android:onClick="startGame">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Tap to start." />
+        android:text="Tap to start."
+        android:textColor="#888888" />
 
 </LinearLayout>
